// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not warn when valid values are passed for the content property 1`] = `
.emotion-0 {
  content: normal;
  content: none;
  content: open-quote;
  content: close-quote;
  content: no-open-quote;
  content: no-close-quote;
  content: initial;
  content: inherit;
  content: "some thing";
  content: 'another thing';
  content: var(--variable-name);
  content: url("http://www.example.com/test.png");
  content: linear-gradient(hotpink, #8be9fd);
  content: radial-gradient(hotpink, #8be9fd);
  content: repeating-linear-gradient(hotpink, #8be9fd);
  content: repeating-radial-gradient(hotpink, #8be9fd);
  content: conic-gradient(hotpink, #8be9fd);
  content: counter(chapter_counter);
  content: counters(section_counter, ".");
  content: attr(value string);
  content: open-quote counter(chapter_counter);
  content: element(name);
}

<div
  className="emotion-0"
/>
`;

exports[`global with css prop 1`] = `null`;

exports[`unsafe pseudo classes in a browser environment still does not warn when the opt-out flag is present 1`] = `
.emotion-0>*:first-child {
  margin-left: 0;
}

.emotion-0>* {
  margin-left: 10px;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":first-child :nth-child(3)" 1`] = `
.emotion-0:first-child :nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":first-child span" 1`] = `
.emotion-0:first-child span {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":first-child" 1`] = `
.emotion-0:first-child {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":first-child, :nth-child(3)" 1`] = `
.emotion-0:first-child,
.emotion-0:nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":first-child, span" 1`] = `
.emotion-0:first-child,
.emotion-0 span {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":first-child:nth-child(3)" 1`] = `
.emotion-0:first-child:nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":not(:first-child)" 1`] = `
.emotion-0:not(:first-child) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":not(:nth-child(3))" 1`] = `
.emotion-0:not(:nth-child(3)) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":nth-child(3)" 1`] = `
.emotion-0:nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with object styles does not warn for ":nth-last-child(7)" 1`] = `
.emotion-0:nth-last-child(7) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":first-child :nth-child(3)" 1`] = `
.emotion-0:first-child :nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":first-child span" 1`] = `
.emotion-0:first-child span {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":first-child" 1`] = `
.emotion-0:first-child {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":first-child, :nth-child(3)" 1`] = `
.emotion-0:first-child,
.emotion-0:nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":first-child, span" 1`] = `
.emotion-0:first-child,
.emotion-0 span {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":first-child:nth-child(3)" 1`] = `
.emotion-0:first-child:nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":not(:first-child)" 1`] = `
.emotion-0:not(:first-child) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":not(:nth-child(3))" 1`] = `
.emotion-0:not(:nth-child(3)) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":nth-child(3)" 1`] = `
.emotion-0:nth-child(3) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`unsafe pseudo classes in a browser environment with string styles does not warn for ":nth-last-child(7)" 1`] = `
.emotion-0:nth-last-child(7) {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;
